--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   </div>
 </div>
 <div class="card d-inline-block me-3" style="width: 16rem;" id="home">
-  <img src="./photos/Photographs.webp" class="card-img-top">
+  <img src="./photos/photographs.webp" class="card-img-top">
   <div class="card-body">
     <p class="card-text">Photographs</p>
   </div>
